[metadata]
name = willowtree
version = 0.1.0
author = Samson Weiner
author_email = samson.weiner@uconn.edu
description = A Python package for tree data structures, phylogenetics, evolution, and genomics.
url = https://github.com/samsonweiner/WillowTree
classifiers = 
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = willowtree